--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -10,6 +10,7 @@ templ Layout(title string) {
 			<link href="/static/css/styles.css" rel="stylesheet"/>
 		</head>
 		<body>
+			@Navbar()
 			{ children... }
 		</body>
 	</html>
