style: add navbar

--- a/templates/homePage.templ
+++ b/templates/homePage.templ
@@ -1,12 +1,23 @@
 package templates
 
 templ HomePage(authorizationURL string) {
-@Layout("Repo Guard") {
-<div class="bg-[#0F1322] p-5">
-	<div>Home Page</div>
-	<a class="bg-[#49E06C] font-rubik px-5 py-2 rounded-lg font-bold" href={ templ.SafeURL(authorizationURL) }>
-		Authorize Repo Guard
-	</a>
-</div>
-}
+	@Layout("Repo Guard") {
+		<div class="flex bg-[#0F1322]">
+			<div class="w-[50%] px-32 py-24 flex flex-col text-white">
+				<div class="font-maven font-semibold text-7xl">GitHub Repository's Intelligent Gatekeeper</div>
+				<div class="text-[#B026FF] font-maven text-2xl font-bold">
+					Tired of sorting through duplicate issues?
+				</div>
+				<div class="font-maven text-2xl font-bold">Keep your repository clutter-free around the clock.</div>
+			</div>
+			<div>
+				<a
+					class="bg-[#49E06C]  font-rubik px-12 py-3.5 rounded-lg font-bold"
+					href={ templ.SafeURL(authorizationURL) }
+				>
+					Authorize Repo Guard
+				</a>
+			</div>
+		</div>
+	}
 }
