--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -558,6 +558,18 @@ video {
   --tw-contain-style:  ;
 }
 
+.flex{
+  display: flex;
+}
+
+.w-\[50\%\]{
+  width: 50%;
+}
+
+.flex-col{
+  flex-direction: column;
+}
+
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -572,18 +584,34 @@ video {
   background-color: rgb(73 224 108 / var(--tw-bg-opacity));
 }
 
-.p-5{
-  padding: 1.25rem;
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.px-32{
+  padding-left: 8rem;
+  padding-right: 8rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-3\.5{
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .font-maven{
@@ -594,6 +622,16 @@ video {
   font-family: "Rubik, sans-serif;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -601,6 +639,15 @@ video {
 
 .font-bold{
   font-weight: 700;
+}
+
+.font-semibold{
+  font-weight: 600;
+}
+
+.text-\[\#B026FF\]{
+  --tw-text-opacity: 1;
+  color: rgb(176 38 255 / var(--tw-text-opacity));
 }
 
 .text-white{
