--- a/templates/navbar.templ
+++ b/templates/navbar.templ
@@ -1,7 +1,7 @@
 package templates
 
 templ Navbar() {
-<nav class="bg-[#0F1322] text-lg text-white p-5 font-maven font-bold">
-	Repo Guard
-</nav>
+	<nav class="bg-[#0F1322] text-lg text-white py-8 px-32 font-maven font-bold">
+		Repo Guard
+	</nav>
 }
