--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -9,7 +9,7 @@ templ Layout(title string) {
 			<title>{ title }</title>
 			<link href="/static/css/styles.css" rel="stylesheet"/>
 		</head>
-		<body>
+		<body class="bg-[#0F1322]">
 			@Navbar()
 			{ children... }
 		</body>
