--- a/templates/homePage.templ
+++ b/templates/homePage.templ
@@ -19,21 +19,29 @@ templ HomePage(authorizationURL string) {
 				<div class="flex flex-col sm:flex-row justify-center items-center gap-4">
 					<a
 						href={ templ.SafeURL(authorizationURL) }
-						class="inline-flex items-center justify-center gap-3 bg-[#90D3DF] hover:bg-[#90D3DF] transition-colors duration-300 text-black font-rubik px-6 py-4 rounded-lg font-bold text-lg group"
+						class="inline-flex items-center justify-center gap-3 bg-[#90D3DF] hover:bg-[#7BBAC5] text-black font-rubik px-6 py-4 rounded-lg font-bold text-lg group transition-all duration-300 transform hover:scale-105 hover:shadow-lg"
 					>
 						<img
 							src="../static/images/github_icon.svg"
 							alt="GitHub Icon"
-							class="w-6 h-6 group-hover:scale-110 transition-transform duration-300"
+							class="w-6 h-6 transition-transform duration-300 group-hover:rotate-12"
 						/>
-						<span>Install GitHub App</span>
+						<span
+							class="relative after:absolute after:bottom-0 after:left-0 after:w-full after:h-0.5 after:bg-black after:scale-x-0 after:origin-bottom-right after:transition-transform after:duration-300 group-hover:after:scale-x-100 group-hover:after:origin-bottom-left"
+						>
+							Install GitHub App
+						</span>
 					</a>
 					<a
-						class="bg-transparent hover:bg-white/10 transition-colors duration-300 border-2 border-[#49E06C]
-			text-[#49E06C] font-rubik px-8 py-3.5 rounded-lg font-bold text-lg"
 						href="#learn-more"
+						class="inline-flex items-center justify-center gap-6 bg-transparent hover:bg-[#49E06C]/10 text-[#49E06C] hover:text-[#3AB057] font-rubik px-6 py-4 rounded-lg font-bold text-lg group transition-all duration-300 transform hover:scale-105 border-2 border-[#49E06C] hover:border-[#3AB057]"
 					>
-						Learn More
+						<img
+							src="../static/images/right_arrow.png"
+							alt="Right Arrow"
+							class="w-6 h-6 transition-transform duration-300 group-hover:translate-x-1"
+						/>
+						<span>Learn More</span>
 					</a>
 				</div>
 			</div>
