style final section

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -621,10 +621,6 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.mb-8{
-  margin-bottom: 2rem;
-}
-
 .flex{
   display: flex;
 }
@@ -649,8 +645,8 @@ video {
   height: 4rem;
 }
 
-.h-20{
-  height: 5rem;
+.h-56{
+  height: 14rem;
 }
 
 .h-6{
@@ -665,8 +661,8 @@ video {
   width: 4rem;
 }
 
-.w-20{
-  width: 5rem;
+.w-56{
+  width: 14rem;
 }
 
 .w-6{
@@ -756,6 +752,10 @@ video {
   background-color: rgb(27 32 51 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#27164361\]{
+  background-color: #27164361;
+}
+
 .bg-\[\#5F6370\]{
   --tw-bg-opacity: 1;
   background-color: rgb(95 99 112 / var(--tw-bg-opacity));
@@ -804,6 +804,11 @@ video {
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-16{
@@ -875,6 +880,10 @@ video {
   font-weight: 600;
 }
 
+.leading-tight{
+  line-height: 1.25;
+}
+
 .text-\[\#49E06C\]{
   --tw-text-opacity: 1;
   color: rgb(73 224 108 / var(--tw-text-opacity));
@@ -903,6 +912,15 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.drop-shadow-xl{
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all{
@@ -1004,9 +1022,9 @@ video {
   background-color: rgb(123 186 197 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#9A20E0\]:hover{
+.hover\:bg-\[\#9020DC\]:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(154 32 224 / var(--tw-bg-opacity));
+  background-color: rgb(144 32 220 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#3AB057\]:hover{
@@ -1056,16 +1074,16 @@ video {
     display: inline;
   }
 
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
   .md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row{
     flex-direction: row;
-  }
-
-  .md\:items-end{
-    align-items: flex-end;
   }
 
   .md\:text-2xl{
