--- a/templates/navbar.templ
+++ b/templates/navbar.templ
@@ -1,7 +1,13 @@
 package templates
 
 templ Navbar() {
-	<nav class="bg-[#0F1322] text-3xl font-black text-white py-8 px-32 font-maven">
-		Repo Guard
+	<nav class="bg-[#0F1322] text-white py-8 px-32 font-maven flex justify-between items-center">
+		<a href="/" class="text-3xl font-black">Repo Guard</a>
+		<div class="space-x-8">
+			<a href="/privacy-policy" class="text-xl hover:text-[#8855EA] transition-colors duration-300">
+				Privacy
+				Policy
+			</a>
+		</div>
 	</nav>
 }
